# lost-in-the-monitor

./: .gitignore  README.md  pyproject.toml
data/xlingual_scaled/: attack-medium-0__high.cs.txt  attack-medium-0__high.sw.txt  attack-medium-0__low.cs.txt  attack-medium-0__low.sw.txt  attack-medium-10__low.cs.txt  attack-medium-10__low.sw.txt  attack-medium-11__high.cs.txt  attack-medium-11__high.sw.txt  attack-medium-11__low.cs.txt  attack-medium-11__low.sw.txt  attack-medium-13__high.cs.txt  attack-medium-13__high.sw.txt  attack-medium-13__low.cs.txt  attack-medium-13__low.sw.txt  attack-medium-14__low.cs.txt  attack-medium-14__low.sw.txt  attack-medium-15__high.cs.txt  attack-medium-15__high.sw.txt  attack-medium-17__high.cs.txt  (+53 more)
notes/: kill-criteria.md  metacentrum-setup.md  pilot-findings.md  pilot-protocol.md  pre-registration.md  translation_pack_cs.md  translation_review_cs.md  v0-review.md  x_thread.md
results/: honest_confound.json  marginal.json  mt_vs_human.json  strongmon_xling.json  weakmon_cs.json  weakmon_en.json  weakmon_sw.json  xlingual_medium.json  xlingual_medium_cs_gemini.json  xlingual_medium_cs_local.json  xlingual_medium_gemini.json  xlingual_medium_local.json  xlingual_medium_sw_gemini.json  xlingual_medium_sw_local.json
scripts/: 00_sandbox.py  01_pilot_cot_capture.py  02_local_monitor.py  03_crosslingual.py  06_make_translation_pack.py  07_mt_vs_human.py  08_build_review.py  09_sync_review.py  10_monitor_noise.py  11_honest_confound.py  12_marginal.py  13_stage_xlingual.py  13b_gemini_translate.py  14_xlingual.py
(+292 files in other folders)
